k8s/service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: combined-services
  ports:
    - protocol: TCP
      port: 3001
      targetPort: service1-port  # This refers to the named port in the pod spec.
  type: ClusterIP
